Verify page, payment with VNPAY, using api for Projects

--- a/.env
+++ b/.env
@@ -1,1 +1,7 @@
 VITE_API_SERVER = http://localhost:5000
+
+VITE_CLOUDINARY_URL=cloudinary://218459632467236:He5SPf9Vq2UDzOoyzJXl_PmGi30@dpuy2k0yr
+VITE_API_SECRET=He5SPf9Vq2UDzOoyzJXl_PmGi30
+VITE_API_KEY=218459632467236
+VITE_CLOUD_NAME=dpuy2k0yr
+VITE_UPLOAD_PRESET=ml_default
