--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
     "lint": "eslint .",
     "preview": "vite preview"
   },
+  "proxy": "http://localhost:5000",
   "dependencies": {
     "axios": "^1.7.7",
+    "cloudinary": "^2.5.1",
     "lucide-react": "^0.452.0",
+    "moment": "^2.30.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
