--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "axios": "^1.7.7",
     "cloudinary": "^2.5.1",
+    "framer-motion": "^11.11.17",
     "lucide-react": "^0.452.0",
     "moment": "^2.30.1",
     "react": "^18.3.1",
