--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "proxy": "http://localhost:5000",
   "dependencies": {
+    "antd": "^5.22.2",
     "axios": "^1.7.7",
     "cloudinary": "^2.5.1",
     "framer-motion": "^11.11.17",
